[gd_scene load_steps=4 format=3 uid="uid://yipebpg486aa"]

[ext_resource type="Script" uid="uid://iluf5f4llaq8" path="res://Scripts/mainmenu.gd" id="1_pposm"]
[ext_resource type="Texture2D" uid="uid://cr6bu2rfsscka" path="res://Textures/mainmenu.png" id="2_web8u"]
[ext_resource type="AudioStream" uid="uid://dotu20e3sfmjq" path="res://Sounds/bgMusicQuiet.mp3" id="3_rtnl3"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pposm")

[node name="Mainmenu" type="Sprite2D" parent="."]
position = Vector2(960, 544)
texture = ExtResource("2_web8u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 643.8
offset_right = 1344.0
offset_bottom = 943.7997

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rtnl3")
volume_db = 15.0
autoplay = true
bus = &"music"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_quit_pressed"]
