[gd_scene load_steps=4 format=3 uid="uid://b4621olfbtr5q"]

[ext_resource type="Script" uid="uid://iluf5f4llaq8" path="res://Scripts/mainmenu.gd" id="1_g1l0l"]
[ext_resource type="Texture2D" uid="uid://dapll1dmwu75y" path="res://Textures/win.png" id="4_g1l0l"]
[ext_resource type="AudioStream" uid="uid://dotu20e3sfmjq" path="res://Sounds/bgMusicQuiet.mp3" id="4_liiam"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1l0l")

[node name="Win" type="Sprite2D" parent="."]
position = Vector2(960, 544)
texture = ExtResource("4_g1l0l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 561.0
offset_top = 643.8
offset_right = 1393.0
offset_bottom = 943.7997

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu
"

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_liiam")
volume_db = 15.0
autoplay = true
bus = &"music"

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
